fix heart visibility

--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -20,7 +20,7 @@
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
-  z-index: 100;
+  // z-index: 100;
 
   max-width: 800px;
   max-height: 700px;
